# incident-response-playbook-generator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: model_config.yaml  org_profile.example.yaml  org_profile.yaml  prompts.yaml
config/knowledge_base/: nist_800_61r3.md
docs/: ARQUITECTURA.md  DECISIONES.md  GOVERNANCE.md  SPECS.md
evals/baselines/: baseline_results.md
evals/eval_cases/: classification_accuracy.md  playbook_quality.md
examples/: demo.py
src/: __init__.py  app.py
src/agent/: __init__.py
src/agent/chains/: __init__.py  classifier.py  playbook_generator.py
src/agent/memory/: __init__.py  session.py
src/agent/tools/descriptions/: __init__.py  tool_descriptions.py
src/agent/tools/schemas/: __init__.py  incident_schemas.py
src/api/: __init__.py  app.py  models.py
src/caching/: __init__.py  file_cache.py
src/guardrails/: __init__.py  input_validation.py
src/inference/: __init__.py  engine.py
src/utils/: __init__.py  config.py  constants.py  helpers.py  output.py
tests/: conftest.py  test_additional_coverage.py  test_cli_features.py  test_guardrails.py  test_integration.py  test_utils.py
