[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-playbook"
version = "1.0.0"
description = "AI-powered NIST SP 800-61 Rev. 3 incident response playbook generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pablo Affonso", email = "0xPdaff@users.noreply.github.com"}
]
keywords = ["incident-response", "nist", "playbook", "security", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.0",
    "markdown>=3.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
ir-playbook = "src.app:main"

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["../config/*.yaml", "../config/*.example.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
